--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <input type="button" name="Add" id="addData" value="Add"  >
-            <input type="button" name="show-all" id="showAll" value="Show All" >
+            <input type="button" name="show-all" id="showAll" value="Check" >
         </form>
         
         <!-- Display table for guests -->
